crates/courier-ftp/src/ui/file_list/snapshots/courier_ftp__ui__file_list__tests__empty_dir.snap
---
source: crates/courier-ftp/src/ui/file_list/tests.rs
expression: t.backend()
---
"┌ Remote: /var/www/empty ──────────────────────────────────────────────────────┐"
"│  Name▲                        Size Type           Modified         Perms     │"
"│  ..                                                                          │"
"│(empty)                                                                       │"
"│                                                                              │"
"│                                                                              │"
"│0 files and 0 directories. Total size: 0 B                                    │"
"└──────────────────────────────────────────────────────────────────────────────┘"
