crates/courier-ftp/src/ui/file_list/snapshots/courier_ftp__ui__file_list__tests__local_listing.snap
---
source: crates/courier-ftp/src/ui/file_list/tests.rs
expression: "render(&mut l, 100, 14).backend()"
---
"┌ Local: /home/me/site ────────────────────────────────────────────────────────────────────────────┐"
"│  Name▲                                                       Size Type           Modified        │"
"│  ..                                                                                              │"
"│  assets/                                                          Directory      2026-10-08 18:22│"
"│  current/ → releases/42                                           Link (dir)     2026-10-08 18:22│"
"│  file2.log                                                    2 B Text file      2026-10-08 18:22│"
"│  file10.log                                                  10 B Text file      2026-10-08 18:22│"
"│  index.html                                               4.0 KiB HTML file      2026-10-08 18:22│"
"│  notes.txt                                                  120 B Text file      2021-01-05      │"
"│  style.css                                                  900 B CSS file       2026-10-08 18:22│"
"│                                                                                                  │"
"│                                                                                                  │"
"│5 files and 2 directories. Total size: 5.0 KiB                                                    │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
