crates/courier-ftp/src/ui/file_list/snapshots/courier_ftp__ui__file_list__tests__not_connected.snap
---
source: crates/courier-ftp/src/ui/file_list/tests.rs
expression: t.backend()
---
"┌ Remote: not connected ───────────────────────────────────┐"
"│Not connected to any server.                              │"
"│Ctrl-s: Site Manager · Ctrl-k: quickconnect               │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
